--- a/locales/es/oled.html
+++ b/locales/es/oled.html
@@ -31,13 +31,14 @@
 
 <script type="text/x-red" data-help-name="Clock">
     <p>Dibuja un reloj digital</p>
-    <p>El <b>paylod</b> debe establecerse en <b>true</b> para habilitar el nodo</p>
-	<p>o establecerse a <b>false</b> para deshabilitarlo</p>
+    <p>El <b>paylod</b> debe establecerse en <b>on</b> para habilitar el nodo</p>
+	<p>o establecerse a <b>off</b> para deshabilitarlo</p>
+	<p>Ejemplo: <b>{"status": "on"}</b></p>
 </script>
 
 <script type="text/x-red" data-help-name="Dimmed">
-    	<p>Cambia el contraste de la pantalla Oled</p>
-    	<p>El <b>paylod</b> debe establecerse en <b>true</b> para reducir el contraste y a  <b>false</b> para volver a ser brillante</p>
+    <p>Cambia el contraste de la pantalla Oled</p>
+    <p>El <b>paylod</b> debe establecerse en <b>true</b> para reducir el contraste y a  <b>false</b> para volver a ser brillante</p>
 </script>
 
 <script type="text/x-red" data-help-name="FillRectangle">
@@ -53,8 +54,8 @@
 </script>
 
 <script type="text/x-red" data-help-name="Invertion">
-    	<p>Invierte el color de todos los pixeles</p>
-    	<p>El <b>paylod</b> debe establecerse a <b>true</b> para invertir <b>false</b> para revertir</p>
+    <p>Invierte el color de todos los pixeles</p>
+    <p>El <b>paylod</b> debe establecerse a <b>true</b> para invertir <b>false</b> para revertir</p>
 </script>
 
 <script type="text/x-red" data-help-name="Image">
